# helm

./: .gitignore  README.md  helm.toml  mixer.toml  pyproject.toml
docs/: architecture.md  helm.md  ilities.md  os-support.md  plan.md  risks-and-tradeoffs.md
helmd/: __main__.py
helmd/actions/: base.py  http.py  keypress.py  multi.py  registry.py  shell.py
helmd/core/: config.py  constants.py  logger.py  paths.py
helmd/core/platform/: __init__.py  base.py  linux.py  mac.py
helmd/hardware/: deck.py  renderer.py  supervisor.py  surface.py
helmd/profiles/: loader.py  manager.py  schema.py  switcher.py
helmd/web/: server.py
helmd/web/routes/: actions.py  mixer.py  profiles.py  status.py  ui.py
mixd/: __main__.py
mixd/python/: __main__.py  config.py  constants.py  devices.py  engine.py  helper.py  persistence.py  server.py  state.py
mixd/python/routes/: apps.py  channels.py  devices.py  outputs.py  routing.py  status.py
mixd/rust/: Cargo.toml
mixd/rust/src/: engine.rs  ipc.rs  lib.rs  mixer.rs  routing.rs
mixd/rust/src/backends/: cpal_io.rs  helper.rs  linux.rs  macos.rs  mod.rs  windows.rs  wire.rs
mixd/rust/tests/: mix_tone.rs
mixd/swift/: Package.swift
mixd/swift/Sources/MixdCaptureDarwin/: AppLister.swift  AudioCapture.swift  Constants.swift  Mixd.swift
packaging/: install.sh
packaging/launchd/: com.media-os.helmd.plist
packaging/systemd/: helmd.service
profiles/: default.toml
